payer_agentforce_agents/NetworkParticipationVerificationAgent/force-app/main/default/objects/HealthcareProvider/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <label>Credentials</label>
    <length>100</length>
    <type>Text</type>
</CustomField>