payer_agentforce_agents/NetworkParticipationVerificationAgent/force-app/main/default/objects/HealthcareProvider/fields/License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>License_Expiry__c</fullName>
    <label>License Expiry</label>
    <type>Date</type>
</CustomField>