payer_agentforce_agents/NetworkParticipationVerificationAgent/force-app/main/default/objects/HealthcareProvider/fields/Next_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Available_Date__c</fullName>
    <label>Next Available Date</label>
    <type>Date</type>
</CustomField>